22.03.6/packages/arm_cortex-a7_neon-vfpv4/luci/index.md
---
---

# [releases](/releases/) / [22.03.6](/releases/22.03.6/) / [packages](/releases/22.03.6/packages/) / [arm_cortex-a7_neon-vfpv4](/releases/22.03.6/packages/arm_cortex-a7_neon-vfpv4/) / luci


| Name | Size | Date |
|:---|---:|---|
| 📁 [..](../) | | |
| 🗄️ [Packages](./Packages) | 8.0K | |
| 🗄️ [Packages.gz](./Packages.gz) | 4.0K | |
| 🗄️ [Packages.manifest](./Packages.manifest) | 12K | |
| 🗄️ [Packages.sig](./Packages.sig) | 4.0K | |
| 🗄️ [index.json](./index.json) | 4.0K | |
| 🗄️ [liblucihttp-lua_2023-03-15-9b5b683f-1_arm_cortex-a7_neon-vfpv4.ipk](./liblucihttp-lua_2023-03-15-9b5b683f-1_arm_cortex-a7_neon-vfpv4.ipk) | 4.0K | |
| 🗄️ [liblucihttp0_2023-03-15-9b5b683f-1_arm_cortex-a7_neon-vfpv4.ipk](./liblucihttp0_2023-03-15-9b5b683f-1_arm_cortex-a7_neon-vfpv4.ipk) | 8.0K | |
| 🗄️ [luci-app-firewall_git-23.093.42704-1c01c64_all.ipk](./luci-app-firewall_git-23.093.42704-1c01c64_all.ipk) | 20K | |
| 🗄️ [luci-app-opkg_git-23.093.42303-e16f620_all.ipk](./luci-app-opkg_git-23.093.42303-e16f620_all.ipk) | 12K | |
| 🗄️ [luci-base_git-23.292.78392-9f66674_arm_cortex-a7_neon-vfpv4.ipk](./luci-base_git-23.292.78392-9f66674_arm_cortex-a7_neon-vfpv4.ipk) | 132K | |
| 🗄️ [luci-lib-base_git-20.232.39649-1f6dc29_all.ipk](./luci-lib-base_git-20.232.39649-1f6dc29_all.ipk) | 16K | |
| 🗄️ [luci-lib-ip_git-23.311.79310-704a335_arm_cortex-a7_neon-vfpv4.ipk](./luci-lib-ip_git-23.311.79310-704a335_arm_cortex-a7_neon-vfpv4.ipk) | 12K | |
| 🗄️ [luci-lib-jsonc_git-23.298.74581-7dfbbca_arm_cortex-a7_neon-vfpv4.ipk](./luci-lib-jsonc_git-23.298.74581-7dfbbca_arm_cortex-a7_neon-vfpv4.ipk) | 8.0K | |
| 🗄️ [luci-lib-nixio_git-20.234.06894-c4a4e43_arm_cortex-a7_neon-vfpv4.ipk](./luci-lib-nixio_git-20.234.06894-c4a4e43_arm_cortex-a7_neon-vfpv4.ipk) | 32K | |
| 🗄️ [luci-mod-admin-full_git-19.253.48496-3f93650_all.ipk](./luci-mod-admin-full_git-19.253.48496-3f93650_all.ipk) | 4.0K | |
| 🗄️ [luci-mod-network_git-23.170.81153-99d3815_all.ipk](./luci-mod-network_git-23.170.81153-99d3815_all.ipk) | 52K | |
| 🗄️ [luci-mod-status_git-23.292.78392-20daafc_arm_cortex-a7_neon-vfpv4.ipk](./luci-mod-status_git-23.292.78392-20daafc_arm_cortex-a7_neon-vfpv4.ipk) | 36K | |
| 🗄️ [luci-mod-system_git-23.118.78821-0c02883_all.ipk](./luci-mod-system_git-23.118.78821-0c02883_all.ipk) | 20K | |
| 🗄️ [luci-proto-ipv6_git-21.148.48881-79947af_all.ipk](./luci-proto-ipv6_git-21.148.48881-79947af_all.ipk) | 4.0K | |
| 🗄️ [luci-proto-ppp_git-21.158.38888-88b9d84_all.ipk](./luci-proto-ppp_git-21.158.38888-88b9d84_all.ipk) | 4.0K | |
| 🗄️ [luci-theme-bootstrap_git-23.093.42704-b47268a_all.ipk](./luci-theme-bootstrap_git-23.093.42704-b47268a_all.ipk) | 20K | |
| 🗄️ [luci_git-23.093.42303-d58cd69_all.ipk](./luci_git-23.093.42303-d58cd69_all.ipk) | 4.0K | |
| 🗄️ [rpcd-mod-luci_20210614_arm_cortex-a7_neon-vfpv4.ipk](./rpcd-mod-luci_20210614_arm_cortex-a7_neon-vfpv4.ipk) | 16K | |
| 🗄️ [rpcd-mod-rrdns_20170710_arm_cortex-a7_neon-vfpv4.ipk](./rpcd-mod-rrdns_20170710_arm_cortex-a7_neon-vfpv4.ipk) | 8.0K | |

