23.05.2/packages/arm_cortex-a7_neon-vfpv4/luci/index.md
---
---

# [releases](/releases/) / [23.05.2](/releases/23.05.2/) / [packages](/releases/23.05.2/packages/) / [arm_cortex-a7_neon-vfpv4](/releases/23.05.2/packages/arm_cortex-a7_neon-vfpv4/) / luci


| Name | Size | Date |
|:---|---:|---|
| 📁 [..](../) | | |
| 🗄️ [Packages](./Packages) | 12K | |
| 🗄️ [Packages.gz](./Packages.gz) | 4.0K | |
| 🗄️ [Packages.manifest](./Packages.manifest) | 16K | |
| 🗄️ [Packages.sig](./Packages.sig) | 4.0K | |
| 🗄️ [index.json](./index.json) | 4.0K | |
| 🗄️ [liblucihttp-lua_2023-03-15-9b5b683f-1_arm_cortex-a7_neon-vfpv4.ipk](./liblucihttp-lua_2023-03-15-9b5b683f-1_arm_cortex-a7_neon-vfpv4.ipk) | 4.0K | |
| 🗄️ [liblucihttp-ucode_2023-03-15-9b5b683f-1_arm_cortex-a7_neon-vfpv4.ipk](./liblucihttp-ucode_2023-03-15-9b5b683f-1_arm_cortex-a7_neon-vfpv4.ipk) | 8.0K | |
| 🗄️ [liblucihttp0_2023-03-15-9b5b683f-1_arm_cortex-a7_neon-vfpv4.ipk](./liblucihttp0_2023-03-15-9b5b683f-1_arm_cortex-a7_neon-vfpv4.ipk) | 8.0K | |
| 🗄️ [luci-app-firewall_git-23.306.38853-a0466cd_all.ipk](./luci-app-firewall_git-23.306.38853-a0466cd_all.ipk) | 20K | |
| 🗄️ [luci-app-opkg_git-23.311.75635-769b30c_all.ipk](./luci-app-opkg_git-23.311.75635-769b30c_all.ipk) | 12K | |
| 🗄️ [luci-base_git-23.306.39416-c86c256_arm_cortex-a7_neon-vfpv4.ipk](./luci-base_git-23.306.39416-c86c256_arm_cortex-a7_neon-vfpv4.ipk) | 124K | |
| 🗄️ [luci-lib-base_git-22.308.54612-9118452_all.ipk](./luci-lib-base_git-22.308.54612-9118452_all.ipk) | 12K | |
| 🗄️ [luci-lib-ip_git-23.311.79290-c2a887e_arm_cortex-a7_neon-vfpv4.ipk](./luci-lib-ip_git-23.311.79290-c2a887e_arm_cortex-a7_neon-vfpv4.ipk) | 12K | |
| 🗄️ [luci-lib-jsonc_git-23.298.74571-62eb535_arm_cortex-a7_neon-vfpv4.ipk](./luci-lib-jsonc_git-23.298.74571-62eb535_arm_cortex-a7_neon-vfpv4.ipk) | 8.0K | |
| 🗄️ [luci-lib-nixio_git-22.222.71555-88b9088_arm_cortex-a7_neon-vfpv4.ipk](./luci-lib-nixio_git-22.222.71555-88b9088_arm_cortex-a7_neon-vfpv4.ipk) | 32K | |
| 🗄️ [luci-light_git-23.024.33244-34dee82_all.ipk](./luci-light_git-23.024.33244-34dee82_all.ipk) | 4.0K | |
| 🗄️ [luci-lua-runtime_git-23.233.52805-dae2684_arm_cortex-a7_neon-vfpv4.ipk](./luci-lua-runtime_git-23.233.52805-dae2684_arm_cortex-a7_neon-vfpv4.ipk) | 32K | |
| 🗄️ [luci-mod-admin-full_git-19.253.48496-3f93650_all.ipk](./luci-mod-admin-full_git-19.253.48496-3f93650_all.ipk) | 4.0K | |
| 🗄️ [luci-mod-network_git-23.313.56166-6da284d_all.ipk](./luci-mod-network_git-23.313.56166-6da284d_all.ipk) | 56K | |
| 🗄️ [luci-mod-status_git-23.306.52197-bdcd3e0_arm_cortex-a7_neon-vfpv4.ipk](./luci-mod-status_git-23.306.52197-bdcd3e0_arm_cortex-a7_neon-vfpv4.ipk) | 40K | |
| 🗄️ [luci-mod-system_git-23.306.39416-7d3abf8_all.ipk](./luci-mod-system_git-23.306.39416-7d3abf8_all.ipk) | 20K | |
| 🗄️ [luci-proto-ipv6_git-21.148.48881-79947af_all.ipk](./luci-proto-ipv6_git-21.148.48881-79947af_all.ipk) | 4.0K | |
| 🗄️ [luci-proto-ppp_git-21.158.38888-88b9d84_all.ipk](./luci-proto-ppp_git-21.158.38888-88b9d84_all.ipk) | 4.0K | |
| 🗄️ [luci-theme-bootstrap_git-23.306.39416-c86c256_all.ipk](./luci-theme-bootstrap_git-23.306.39416-c86c256_all.ipk) | 20K | |
| 🗄️ [luci_git-23.051.66410-a505bb1_all.ipk](./luci_git-23.051.66410-a505bb1_all.ipk) | 4.0K | |
| 🗄️ [rpcd-mod-luci_20230123-1_arm_cortex-a7_neon-vfpv4.ipk](./rpcd-mod-luci_20230123-1_arm_cortex-a7_neon-vfpv4.ipk) | 16K | |
| 🗄️ [rpcd-mod-rrdns_20170710_arm_cortex-a7_neon-vfpv4.ipk](./rpcd-mod-rrdns_20170710_arm_cortex-a7_neon-vfpv4.ipk) | 8.0K | |
| 🗄️ [ucode-mod-html_1_arm_cortex-a7_neon-vfpv4.ipk](./ucode-mod-html_1_arm_cortex-a7_neon-vfpv4.ipk) | 24K | |
| 🗄️ [ucode-mod-lua_1_arm_cortex-a7_neon-vfpv4.ipk](./ucode-mod-lua_1_arm_cortex-a7_neon-vfpv4.ipk) | 12K | |

